config/k8s-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: adminmongo
  labels:
    app: adminmongo
spec:
  ports:
  - port: 1234
    targetPort: 1234
  selector:
    app: adminmongo
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminmongo
spec:
  selector:
    matchLabels:
      app: adminmongo
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  # Keep 1 previous ReplicaSet in case a rollback is needed
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: adminmongo
    spec:
      containers:

      - name: adminmongo
        # <IMAGE> is replaced with DockerHub image with correct tag by GitHub Actions script before deployment
        image: index.docker.io/<IMAGE>
        imagePullPolicy: Always
        ports:
        - containerPort: 1234
        resources:
          requests:
            cpu: 10m
            memory: "60Mi"
          limits:
            cpu: 20m
            memory: "90Mi"
      restartPolicy: Always

      # Required for private images
      imagePullSecrets:
        - name: dhgmsecretkey
---
