config/k8s-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: am-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "am.grafomap.com"
    secretName: am-tls
  rules:
  - host: am.grafomap.com
    http:
      paths:
      - backend:
          serviceName: adminmongo
          servicePort: 1234
        path: /
---
